--- a/Home.css
+++ b/Home.css
@@ -1,33 +1,36 @@
 *{
     box-sizing: border-box;
 }
-.page{
-  min-height: 100%;
-  color: #333;
-  background-color: #fff;
-  margin: 0;
-  font-family: Arial, sans-serif;
-  font-size: 14px;
-  line-height: 20px;
- }
-.header{
+.h2{
+    color: #180547;
+    margin-top: 0;
+    margin-bottom: 30px;
+    font-family: Sora, sans-serif;
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 81px;
+    }
+  .content {
+    max-width: 2568px;
+    margin: auto;
+    background: white;  
+    justify-content: center;
+    align-items: center;
+  }
+  .header{
+    display: flex;
     z-index: 1500;
     height: 89px;
-    background-color: rgba(255, 255, 255, .96);
+    background-color: rgba(255, 255, 255, 1);
     margin: auto auto 0;
     padding: 0;
     position: sticky;
     top: 0;
-}
-w-nav::after {
-  clear: both;
-}
-.w-nav::before, .w-nav::after {
-  content: " ";
-  grid-area: 1 / 1 / 2 / 2;
-  display: table;
+    max-width: 2658px;
+    width: 100%;
 }
 .header{
+    display: flex;
     float:left;
     align-items: center;
     justify-content: center;
@@ -42,36 +45,23 @@ w-nav::after {
     font-family: Arial, sans-serif;
     font-size: 14px;
     line-height: 20px;
-}
-.container-default-2 {
-  height: auto;
-  max-width: 1268px;
-  flex: 1;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0 20px 0 55px;
-}
-.header-wrapper {
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  margin-left: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  display: flex;
+    max-width: 2658px;
+    width: 100%;
 }
 .header a{
+    display: flex;
+    flex-direction: inherit;
     float:left;
     text-align: center;
     height: auto;
     text-decoration: none;
-    max-width: 1268px;
+    max-width: 2681px;
     flex: 1;
     margin: auto;
     color: #333;
     font-family: Arial, sans-serif;
     font-size: 14px;
-    padding: 0px 20px;
+    padding: 20px 20px;
     line-height: 20px;
 }
   
@@ -88,5 +78,49 @@ w-nav::after {
   }
 .image{
     width: 100%;
-    align-items: center;
+    float:left;
 }
+
+.btn {
+    border: none;
+    background-color:#7289f2;
+    padding: 0px 40px;
+    font-size: 12px;
+    cursor: pointer;
+    display: inline-block;
+    height: 54px;
+    color: #ffffff;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  .container1{
+    display: flex;
+    flex-direction: row;
+    max-width: 1258px;
+    width: 100%;
+    max-height: 743px;
+    height:100%;
+}
+.content2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+    max-width: 600px;
+    width:50%;
+    background-color: inherit;   
+    height: 971px;
+ }
+ .page1{    
+    max-height: 971px;
+    height:100%;
+    max-width: 2698px;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: #f8f7fc;
+    background-image: url("https://uploads-ssl.webflow.com/633e6bac204d4595a7fb499b/636ddb1c49cf12846d2ab491_HomeHero-min.png");
+    background-position: 60%;
+    background-size: cover;
+    padding-top: 100px;
+ }
